--- a/src/styles/alain/themes/theme.less
+++ b/src/styles/alain/themes/theme.less
@@ -483,6 +483,10 @@
                 }
             }
         }
+
+        .has-error .ant-select-selection {
+            border-color: #f04134 !important;
+        }
     }
     .SELECT-mixin();
 
